--- a/app/src/main/res/layout/mesa_layout_creditsactivity.xml
+++ b/app/src/main/res/layout/mesa_layout_creditsactivity.xml
@@ -22,7 +22,7 @@
             android:textSize="15.0sp"
             android:textColor="@color/mesa_widget_body_text_color"
             android:lineSpacingExtra="4.0sp"
-            android:text="The following page contains all the libraries/code snippets used in this app."/>
+            android:text="@string/mesa_credits_desc"/>
 
         <FrameLayout
             android:id="@+id/mesa_fragmentcontainer_creditsactivity"
