--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -156,6 +156,7 @@
     <dimen name="sesl_hover_tooltip_popup_left_margin">12.0dip</dimen>
     <dimen name="sesl_hover_tooltip_popup_right_margin">12.0dip</dimen>
     <dimen name="sesl_hover_tooltip_popup_top_margin">6.0dip</dimen>
+    <dimen name="sesl_hover_tooltip_popup_area_margin">20.0dip</dimen>
 
     <dimen name="sesl_panel_menu_list_width">296.0dip</dimen>
 
