--- a/app/src/main/res/layout/sesl_preference_recyclerview.xml
+++ b/app/src/main/res/layout/sesl_preference_recyclerview.xml
@@ -1,3 +1,3 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.samsung.android.ui.recyclerview.widget.SeslRecyclerView android:id="@+id/list" android:scrollbars="vertical" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="fill_parent"
+<com.samsung.android.ui.recyclerview.widget.SeslRecyclerView android:id="@+id/recycler_view" android:scrollbars="vertical" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="fill_parent"
   xmlns:android="http://schemas.android.com/apk/res/android" />
