--- a/app/src/main/res/layout/mesa_tb_baselayout_listfragment.xml
+++ b/app/src/main/res/layout/mesa_tb_baselayout_listfragment.xml
@@ -5,5 +5,5 @@
     android:layout_height="fill_parent"
     android:background="?cardBgColor"
     android:clipToPadding="false"
-    android:scrollbars="vertical"
+    android:scrollbars="none"
     xmlns:android="http://schemas.android.com/apk/res/android" />
