--- a/app/src/main/res/layout/sesl_switch_preference_screen_widget_divider.xml
+++ b/app/src/main/res/layout/sesl_switch_preference_screen_widget_divider.xml
@@ -2,5 +2,5 @@
 <LinearLayout android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="fill_parent"
   xmlns:android="http://schemas.android.com/apk/res/android">
     <View android:background="?switchDividerColor" android:layout_width="@dimen/sesl_switch_divider_height" android:layout_height="22.0dip" />
-    <com.samsung.android.ui.widget.SeslSwitch android:id="@android:id/switch_widget" android:focusable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingStart="9.0dip" android:paddingEnd="?android:listPreferredItemPaddingEnd" />
+    <com.samsung.android.ui.widget.SeslSwitch android:id="@android:id/switch_widget" android:focusable="false" android:layout_width="wrap_content" android:layout_height="fill_parent" android:paddingStart="9.0dip" android:paddingEnd="?android:listPreferredItemPaddingEnd" />
 </LinearLayout>
