--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1108,12 +1108,15 @@
     <style name="mesa_SeslSeekBarStyle" parent="@android:style/Widget">
         <item name="android:background">@drawable/sesl_seek_bar_background_borderless</item>
         <item name="android:focusable">true</item>
+        <item name="android:maxHeight">@dimen/sesl_progress_bar_min_height</item>
+        <item name="android:indeterminateOnly">false</item>
         <item name="android:indeterminateDrawable">@drawable/sesl_scrubber_progress_horizontal</item>
         <item name="android:progressDrawable">@drawable/sesl_scrubber_progress_horizontal</item>
         <item name="android:minHeight">@dimen/sesl_progress_bar_min_height</item>
         <item name="android:thumb">@drawable/sesl_scrubber_control_anim_dark</item>
-        <item name="android:paddingStart">@dimen/sesl_progress_bar_min_height</item>
-        <item name="android:paddingEnd">@dimen/sesl_progress_bar_min_height</item>
+        <item name="android:paddingStart">@dimen/sesl_seekbar_padding_horizontal</item>
+        <item name="android:paddingEnd">@dimen/sesl_seekbar_padding_horizontal</item>
+        <item name="android:mirrorForRtl">true</item>
         <item name="android:splitTrack">false</item>
         <item name="useDisabledAlpha">true</item>
     </style>
