--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -174,6 +174,9 @@
 
     <dimen name="sesl_seekbar_ripple_radius">16.0dip</dimen>
     <dimen name="sesl_seekbar_track_height">3.0dip</dimen>
+    <dimen name="sesl_seekbar_track_height_expand">17.0dip</dimen>
+    <dimen name="sesl_seekbar_thumb_radius">8.5dip</dimen>
+    <dimen name="sesl_seekbar_padding_horizontal">16.0dip</dimen>
     <dimen name="sesl_progress_bar_min_height">16.0dip</dimen>
 
     <dimen name="sesl_button_text_size">15.0sp</dimen>
